# alpha-virtual-assistant

./: .gitignore  Ollama_with_prompt.py  data.json  functions.py  requirment.txt  search_agent.py
cpp/: CMakeLists.txt  Makefile  io.cpp  io.h  main  main.cpp  virtual_assistant
cpp/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
cpp/stt_tts/: audio_capture.cpp
cpp/virtual_assistant_autogen/: deps  moc_predefs.h
python/: requirements.txt
python/model/main_model/: Untitled.ipynb
python/model/search_model/: Untitled.ipynb  Untitled_checkpoint.ipynb  dataset.json
python/model/search_model/.ipynb_checkpoints/: dataset_600-checkpoint.json
python/speech/: speech_to_text.py
python/stt/: speech_to_text.py  text_to_speech.py
